# nina-chess

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CodeStyle.txt  Directory.build.props  LICENSE  README.md  attributions.txt  justfile  nina-chess.sln  perftsuite.epd
BookGenerator/: BookGen.csproj  BookPosition.cs  ChessBoard.cs  PgnParser.cs  Program.cs
Visualiser/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  PositionEntry.cs  Visualiser.csproj
hooks/: commit-msg.sh
nina-chess/: accumulator.h  accumulator.inl  activation_function.h  alpha_beta.h  architecture.h  attacks.h  avx2_utils.h  avx_utils.h  bench_main.cpp  bit_manip.h  bitmasks.h  board.cpp  board.h  board.inl  board_features.h  castling.h  chess.h  chess_bitboard_feature_iterator.h  chess_constants.h  color.h  common_incremental_updater.h  cpp.hint  dense_layer.h  dense_layer_test.h  evaluator.cpp  evaluator.h  evaluator.inl  game_generation.h  game_generation_main.cpp  game_generation_test.h  incremental_updater.h  individual_search_context.h  intrinsics.h  legacy_generation_code.cpp  lol.txt  move.h  move_gen.h  move_list.h  move_type.h  movegen_utils.h  (+45 more)
nina-chess/Chess/: board_features.h  castling.h  chess.h  chess_constants.h  color.h  move.h  move_type.h  piece.h  piece_type.h  position.h  side.h  zobrist.h
nina-chess/Core/Engine/: bit_manip.h  bitmasks.h  rng.h
nina-chess/Eval/: chess_bitboard_feature_iterator.h  evaluator.h  psqt.h  score.h
nina-chess/GameGeneration/: book.h  game_generation.h  game_generation_test.h
nina-chess/Hardware/: architecture.h  avx_utils.h  intrinsics.h  simd.h
nina-chess/MoveGen/: attacks.h  move_gen.h  move_list.h
nina-chess/NN/: accumulator.h  activation_function.h  dense_layer.h  dense_layer_test.h  weights.h
nina-chess/Search/: alpha_beta.h  perft.h  position_stack.h  search.h  search_constraints.h  search_core.h  search_result.h  transposition_table.h
nina-chess/Search/SearchContext/: individual_search_context.h  shared_search_context.h
nina-chess/Search/SearchContext/SearchCancellationPolicies/: search_cancellation_policy.h  search_nodes_cancellation_policy.h  search_time_cancellation_policy.h
nina-chess/SourceFiles/: bench_main.cpp  game_generation_main.cpp  nina-chess.cpp  uci.cpp
nina-chess/UCI/: uci.h
nina-chess/old/: legacy_generation_code.cpp
scripts/: shuffle_data.py  sync_filters.py
test/: bench_executables.py  benchmark.py  perftsuite.epd  run_benchmark.py
